--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <head>
   <title>Responsi Web 1</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+    rel="stylesheet"
+  />
+
+  <style>
+    * {
+      font-family: "Montserrat", sans-serif;
+    }
+
+    .main {
+      padding-top: 20px;
+      padding-left: 50px;
+      padding-right: 50x;
+    }
+  </style>
 </head>
 <body>
-  <h1>PEMROGRAMAN WEB</h1>
+  <div class="main"></div>
+  <center>
+    <h1>PEMROGRAMAN WEB</h1>
+  </center>
+  <img
+    src="https://thumb.tvonenews.com/thumbnail/2022/09/23/632d8dafd5df8-tak-disangka-ini-alasan-intan-lembata-mengubah-lirik-cukup-dikenang-saja-jadi-rehan-ternyata_665_374.jpg"
+    alt=""
+    width=""
+    height=""
+  />
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id mollitia cum
     blanditiis, cupiditate odit iusto officia animi, labore autem distinctio
